src/objects/Training__c.object
<CustomObject>
    <description>This object tracks details of Training sessions held with both HealthySteps Sites overall and individual HealthySteps Site staff members.</description>
    <fields>
        <fullName>C4G_Cost_of_Training__c</fullName>
        <label>Cost of Training</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_Institute_Training_Date__c</fullName>
        <formula>C4G_HealthySteps_Site__r.C4G_HealthySteps_Institute_Training_Date__c</formula>
        <label>HealthySteps Institute Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_Site__c</fullName>
        <label>HealthySteps Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Training</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C4G_Number_of_Training_Days__c</fullName>
        <label>Number of Training Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_Number_of_people_trained__c</fullName>
        <label>Number of People Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_NumberofSitesTrained__c</fullName>
        <description>This field automatically calculates the total number of Sites who had Contacts attend the Training session.</description>
        <inlineHelpText>This field automatically calculates the total number of Sites who had Contacts attend the Training session.</inlineHelpText>
        <label>Number of Sites Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_Trainers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the HealthySteps contact who assisted/co-facilitated the HSI training.</description>
        <inlineHelpText>Search and select the HealthySteps contact who assisted/co-facilitated the HSI training.</inlineHelpText>
        <label>Alt Trainer 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training</relationshipLabel>
        <relationshipName>Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C4G_TrainingDate__c</fullName>
        <description>The date that the Training session is scheduled for.</description>
        <inlineHelpText>The date that the Training session is scheduled for.</inlineHelpText>
        <label>HealthySteps Institute Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_Trainer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the HealthySteps National Office staff member who conducted the HSI training.</description>
        <inlineHelpText>Search and select the HealthySteps National Office staff member who conducted the HSI training.</inlineHelpText>
        <label>Trainer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFG_Trainer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the HealthySteps National Office staff member who conducted the HSI training.</description>
        <inlineHelpText>Search and select the HealthySteps National Office staff member who conducted the HSI training.</inlineHelpText>
        <label>Trainer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFG_Trainer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the HealthySteps National Office staff member who conducted the HSI training.</description>
        <inlineHelpText>Search and select the HealthySteps National Office staff member who conducted the HSI training.</inlineHelpText>
        <label>Trainer 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Attendee_Form_Link__c</fullName>
        <formula>HYPERLINK("https://www.tfaforms.com/4682613?Id="&amp; Id,"https://www.tfaforms.com/4682613?Id="&amp; Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Attendee Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Form_Site_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Site 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings (Contact Form Site 2)</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Form_Site_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Site 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings (Contact Form Site 3)</relationshipLabel>
        <relationshipName>Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Form_Site_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Site 4</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings (HealthySteps Site 4)</relationshipLabel>
        <relationshipName>Trainings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Number_of_Options__c</fullName>
        <formula>IF(ISBLANK( Contact_Form_Site_2__c ), 1, IF(ISBLANK( Contact_Form_Site_3__c ), 2,IF(ISBLANK( Contact_Form_Site_4__c ), 3, 4 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Number of Options</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Option_1_Name__c</fullName>
        <formula>C4G_HealthySteps_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Option 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Option_2_Name__c</fullName>
        <formula>Contact_Form_Site_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Option 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Option_3_Name__c</fullName>
        <formula>Contact_Form_Site_3__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Option 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPL_Start_Date__c</fullName>
        <formula>CASE ( 
  MOD( C4G_TrainingDate__c - DATE( 1900, 1, 7 ), 7 ),
  3, C4G_TrainingDate__c + 2 + (C4G_Number_of_Training_Days__c ),
  4, C4G_TrainingDate__c + 2 + (C4G_Number_of_Training_Days__c ),
  5, C4G_TrainingDate__c + 2 + (C4G_Number_of_Training_Days__c ),
  6, C4G_TrainingDate__c + 1 + (C4G_Number_of_Training_Days__c ),
  C4G_TrainingDate__c + (C4G_Number_of_Training_Days__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMPL_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c4g_Link_to_File__c</fullName>
        <description>Please insert a link to PPT/supporting docs associated with this training</description>
        <inlineHelpText>Please insert a link to PPT/supporting docs associated with this training</inlineHelpText>
        <label>Link to File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c4g_Trainer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For individually offered trainings, select the HealthySteps Site staff member to associate the training record to.</description>
        <inlineHelpText>For individually offered trainings, select the HealthySteps Site staff member to associate the training record to.</inlineHelpText>
        <label>Alt Trainer 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c4g_Trainer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For individually offered trainings, select the HealthySteps Site staff member to associate the training record to.</description>
        <inlineHelpText>For individually offered trainings, select the HealthySteps Site staff member to associate the training record to.</inlineHelpText>
        <label>Alt Trainer 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training</relationshipLabel>
        <relationshipName>Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HealthySteps_Training</fullName>
        <columns>NAME</columns>
        <columns>C4G_HealthySteps_Institute_Training_Date__c</columns>
        <columns>C4G_Number_of_Training_Days__c</columns>
        <columns>C4G_Number_of_people_trained__c</columns>
        <filterScope>Everything</filterScope>
        <label>HealthySteps Training</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>